A considerably cleaned up and somewhat improved FlexiGridPanelModel.
Lots and lots of textual cleanup.